--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,6 @@ env:
     - TOX_ENV=dj110-coveralls
     - TOX_ENV=dj111-coveralls
     - TOX_ENV=djmaster-coveralls
+matrix:
+  allow_failures:
+    - env: TOX_ENV=djmaster-coveralls
